--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jspdf": "^3.0.3",
     "lucide-react": "^0.454.0",
     "next": "16.0.0",
+    "nodemailer": "^6.9.8",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
@@ -68,6 +69,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
