Rebrand: Change app name from VitaSlims to 7ESAB with new logo throughout application

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "VitaSlims ERP",
-  "short_name": "VitaSlims",
+  "name": "7ESAB ERP",
+  "short_name": "7ESAB",
   "description": "نظام محاسبة وإدارة موارد المؤسسات - ERP Professional System",
   "start_url": "/dashboard",
   "display": "standalone",
