--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,30 +24,25 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'pnpm'
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
+          cache: 'npm'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm ci
 
       - name: Run linter
-        run: pnpm lint
+        run: npm run lint
         continue-on-error: true
 
       - name: Run critical tests
-        run: pnpm test tests/critical
+        run: npm test -- tests/critical
         continue-on-error: false
 
       - name: Run API integration tests
-        run: pnpm test tests/integration
+        run: npm test -- tests/integration
         continue-on-error: false
 
       - name: Run E2E tests
-        run: pnpm test tests/e2e
+        run: npm test -- tests/e2e
         continue-on-error: false
 
       - name: Fail on test errors
