--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,96 +1,21 @@
 {
   "name": "7ESAB ERP",
   "short_name": "7ESAB",
-  "description": "نظام محاسبة وإدارة موارد المؤسسات - ERP Professional System",
+  "description": "نظام محاسبة وإدارة موارد المؤسسات",
   "start_url": "/dashboard",
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#2563eb",
-  "orientation": "any",
-  "scope": "/",
-  "lang": "ar",
-  "dir": "rtl",
-  "categories": ["business", "finance", "productivity"],
   "icons": [
-    {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
     {
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
-  ],
-  "shortcuts": [
-    {
-      "name": "لوحة التحكم",
-      "short_name": "Dashboard",
-      "description": "عرض لوحة التحكم الرئيسية",
-      "url": "/dashboard",
-      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "فواتير المبيعات",
-      "short_name": "Invoices",
-      "description": "إدارة فواتير المبيعات",
-      "url": "/invoices",
-      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "فواتير المشتريات",
-      "short_name": "Bills",
-      "description": "إدارة فواتير المشتريات",
-      "url": "/bills",
-      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "التقارير",
-      "short_name": "Reports",
-      "description": "عرض التقارير المالية",
-      "url": "/reports",
-      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
-    }
-  ],
-  "related_applications": [],
-  "prefer_related_applications": false
+  ]
 }
