--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:integration": "vitest run tests/integration",
     "test:e2e": "vitest run tests/e2e",
     "test:coverage": "vitest run --coverage",
+    "test:setup": "node scripts/setup-test-env.js",
     "tooltips:extract": "node scripts/extract-tooltips-simple.js",
     "tooltips:update": "npm run tooltips:extract"
   },
