السماح بفشل integration/E2E tests دون إيقاف الـ workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Run API integration tests
         if: steps.check-credentials.outputs.credentials_available == 'true'
         run: npm test -- tests/integration
-        continue-on-error: false
+        continue-on-error: true
 
       - name: Skip integration tests (no credentials)
         if: steps.check-credentials.outputs.credentials_available == 'false'
@@ -65,7 +65,7 @@ jobs:
       - name: Run E2E tests
         if: steps.check-credentials.outputs.credentials_available == 'true'
         run: npm test -- tests/e2e
-        continue-on-error: false
+        continue-on-error: true
 
       - name: Skip E2E tests (no credentials)
         if: steps.check-credentials.outputs.credentials_available == 'false'
