--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,17 @@
 {
   "name": "7ESAB ERP",
   "short_name": "7ESAB",
-  "description": "نظام محاسبة وإدارة موارد المؤسسات",
-  "start_url": "/dashboard",
+  "description": "Enterprise Resource Planning System",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#0f172a",
+  "background_color": "#ffffff",
   "theme_color": "#2563eb",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icon.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
