Complete Accounting Audit System - Fixed 72 Journal Entries
 Summary:
- Created comprehensive accounting audit system
- Fixed 18 invoices without journal entries
- Fixed 1 bill without journal entry
- Fixed 53 payment journal entries
- All 411 journal entries are now balanced (0 unbalanced)

 Results:
- Before: 339 journal entries, 18 invoices missing journals (30%)
- After: 411 journal entries (+72), 0 invoices missing journals (100% fixed)
- Status:  All balanced, 0 errors

 New Scripts:
- scripts/quick-audit.js - Quick audit (1-2 min)
- scripts/fix-missing-journals.js - Comprehensive fix
- scripts/fix-invoices-bypass-trigger.js - Invoice journal fix
- scripts/fix-bills-bypass-trigger.js - Bill journal fix
- scripts/check-invoice-data.js - Data inspection tool

 Documentation:
- AUDIT_START_HERE.md - Quick start guide
- ACCOUNTING_AUDIT_README.md - Overview
- ACCOUNTING_AUDIT_EXECUTION_GUIDE.md - Execution guide
- AUDIT_FIX_GUIDE.md - Fix guide
- ACCOUNTING_AUDIT_FINAL_SUMMARY.md - Final summary

 System Status: Ready for production use

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "tooltips:extract": "node scripts/extract-tooltips-simple.js",
     "tooltips:update": "npm run tooltips:extract",
     "audit:comprehensive": "node scripts/comprehensive-audit-simple.js",
+    "audit:quick": "node scripts/quick-audit.js",
+    "audit:fix": "node scripts/fix-missing-journals.js",
     "audit:sql": "echo 'استخدم Supabase SQL Editor لتنفيذ scripts/COMPREHENSIVE_ACCOUNTING_AUDIT.sql'",
     "deploy": "vercel --prod",
     "deploy:preview": "vercel"
