fix: allow employees to see all inventory transactions in their branch/warehouse

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "npm.packageManager": "auto",
     "augment.disableFocusOnAugmentPanel": true,
     "augment.experimental.terminal.vscodeTerminalStrategy": "Augment",
-    "augment.nextEdit.enableGlobalBackgroundSuggestions": true
+    "augment.nextEdit.enableGlobalBackgroundSuggestions": true,
+    "Codegeex.SidebarUI.LanguagePreference": "English",
+    "Codegeex.CommitMessage.LanguagePreference": "English",
+    "Codegeex.RepoIndex": true
 }
