--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ name: CI - Tests & Lint
 # - Integration tests: Only run if Supabase credentials are configured
 # - E2E tests: Only run if Supabase credentials are configured
 # - Security checks: Always run
-# Last updated: 2025-12-21
+# Last updated: 2026-01-27
 
 on:
   push:
@@ -107,4 +107,41 @@ jobs:
             exit 1
           fi
           echo "✅ Error handling checks passed"
+
+  deploy:
+    name: Deploy to Vercel (production)
+    needs: [test, security-check]
+    runs-on: ubuntu-latest
+    # ✅ نشر فقط عند push مباشرة على main (ليس على PR)
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    env:
+      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      # 🔐 سحب إعدادات Vercel للبيئة الإنتاجية
+      - name: Pull Vercel environment
+        run: npx vercel pull --yes --environment=production --token=$VERCEL_TOKEN
+
+      # 🏗️ بناء مسبق باستخدام Vercel
+      - name: Build project with Vercel
+        run: npx vercel build --prod --token=$VERCEL_TOKEN
+
+      # 🚀 نشر النسخة المبنية إلى الإنتاج
+      - name: Deploy prebuilt artifacts to production
+        run: npx vercel deploy --prebuilt --prod --token=$VERCEL_TOKEN
 
