--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,6 +117,9 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     env:
+      # ✅ هذه الـ secrets اختيارية - إذا لم تكن موجودة، سيتم تمرير قيم فارغة
+      # ⚠️ Linter warnings هنا طبيعية ومتوقعة - الـ linter لا يعرف أن الـ secrets موجودة أم لا
+      # هذه تحذيرات فقط (warnings) وليست أخطاء (errors)، ويمكن تجاهلها بأمان
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
       VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
