--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tooltips:update": "npm run tooltips:extract",
     "audit:comprehensive": "node scripts/comprehensive-audit-simple.js",
     "audit:quick": "node scripts/quick-audit.js",
+    "load-test": "npx tsx scripts/load-test.ts",
     "audit:fix": "node scripts/fix-missing-journals.js",
     "inventory:audit": "node scripts/inventory-audit.js",
     "inventory:fix": "node scripts/fix-inventory-issues.js",
